update(client): fix colors for dark mode; add logo link

--- a/packages/client/src/styles/index.scss
+++ b/packages/client/src/styles/index.scss
@@ -34,7 +34,7 @@
         --caution: 45 100% 50%;
         --caution-foreground: 45 100% 20%;
 
-        --danger: 0 100% 50%;
+        --danger: 0 63% 50%;
         --danger-foreground: 210 40% 98%;
 
         --info: 210 70% 50%;
@@ -84,7 +84,7 @@
         --caution: 45 100% 50%;
         --caution-foreground: 45 100% 20%;
 
-        --danger: 0 63% 31%;
+        --danger: 0 63% 50%;
         --danger-foreground: 210 40% 98%;
 
         --info: 210 70% 50%;
